--- a/license.html
+++ b/license.html
@@ -8,10 +8,9 @@
 <body bgcolor="#00000000" text="#FFFFFFFF">
 
 <h1>Icons</h1>
-Many of the icons used in Squirrel are coming from
-http://www.flaticon.com/
-<a href="http://www.flaticon.com">http://www.flaticon.com</a>
 
+<div>Some icons are made by <a href="http://www.icons8.com" title="Icons8">Icons8</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a></div>
+<div>Some icons are made by <a href="http://www.freepik.com/" title="FreePik">FreePik</a></div>
 <h1>ZXing</h1>
 <a href="http://code.google.com/p/zxing/wiki/LicenseQuestions">
 http://code.google.com/p/zxing/wiki/LicenseQuestions</a> </p>
